--- a/mvc/mvc.csproj
+++ b/mvc/mvc.csproj
@@ -28,6 +28,7 @@
     <Folder Include="Controllers\API\" />
     <Folder Include="ReactApp\" />
     <Folder Include="ReactApp\src\components\" />
+    <Folder Include="Views\NewFolder\" />
   </ItemGroup>
 
 	<ItemGroup>
